feat: добавлены методы для предсказаний в api
